--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mixpanel-browser": "^2.43.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
     "@types/react-dom": "17.0.14",
