--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@growthbook/growthbook-react": "^0.8.1",
     "mixpanel-browser": "^2.43.0",
     "next": "12.1.0",
     "react": "17.0.2",
