--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mixpanel-browser": "^2.43.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
